fix: docs-content overflow style

--- a/src/styles/templates/docs.sass
+++ b/src/styles/templates/docs.sass
@@ -8,6 +8,7 @@
 
 .docs-content
 	width: 100%
+	overflow: auto
 
 @media screen and (max-width: 1200px)
 	.docs
